; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/roles/extr_class.c_usb_role_switch_unregister.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/roles/extr_class.c_usb_role_switch_unregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_role_switch = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usb_role_switch_unregister(%struct.usb_role_switch* %0) #0 {
  %2 = alloca %struct.usb_role_switch*, align 8
  store %struct.usb_role_switch* %0, %struct.usb_role_switch** %2, align 8
  %3 = load %struct.usb_role_switch*, %struct.usb_role_switch** %2, align 8
  %4 = call i32 @IS_ERR_OR_NULL(%struct.usb_role_switch* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load %struct.usb_role_switch*, %struct.usb_role_switch** %2, align 8
  %8 = getelementptr inbounds %struct.usb_role_switch, %struct.usb_role_switch* %7, i32 0, i32 0
  %9 = call i32 @device_unregister(i32* %8)
  br label %10

10:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @IS_ERR_OR_NULL(%struct.usb_role_switch*) #1

declare dso_local i32 @device_unregister(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
